Minor fix for warning